[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Laser_Behaviour.gd" type="Script" id=1]
[ext_resource path="res://materials/Laser_basecolor.png" type="Texture" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.05
bottom_radius = 0.1
height = 0.07
radial_segments = 16
rings = 0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.5, 0.5, 0.5, 1 )
roughness = 0.5

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.02
bottom_radius = 0.02
height = 3.8
radial_segments = 8
rings = 0

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_do_not_receive_shadows = true
albedo_color = Color( 1, 1, 1, 0.607843 )
albedo_texture = ExtResource( 2 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false
uv1_scale = Vector3( 1, 0.5, 1 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.2, 2.3, 0.2 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.67, 0.67, 0.67, 1 )

[node name="Lasers" type="Spatial"]
script = ExtResource( 1 )

[node name="Emitter" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Laser" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 1.9 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Emitter2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.75, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Laser2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.75, 1.9 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Emitter3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Laser3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 1.9 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 1.75 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.5
shadow_enabled = true
omni_range = 4.87149
omni_attenuation = 3.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 3.8 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
